[package]
name = "multi-seq-align"
version = "0.1.0"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
description = """
Manipulate multiple sequence alignments (DNA/protein).
"""
license = "Apache-2.0"
categories = ["science", "data-structures"]
readme = "README.md"
repository = "https://github.com/jeanmanguy/multi-seq-align"
homepage = "https://github.com/jeanmanguy/multi-seq-align"
keywords = ["bioinformatics", "alignment", "DNA", "protein", "msa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
displaydoc = "0.1"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.6.1"

